--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="profile-header">
         <div class="avatar">
           <img
-            src="D:\SURYANI\SEMESTER 7\PEMROGRAMAN WEB\UTS web\DSC_6219.JPG"
+            src="DSC_6219.JPG"
             alt="Profile Picture"
           />
         </div>
